Naprawiłam swoje testy